--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "veams-component-video",
-	"version": "1.0.2",
+	"version": "2.0.0",
 	"ignore": [
 		".bowerrc",
 		".gitignore",
@@ -10,6 +10,10 @@
 		{
 			"name": "Sebastian Fitzner",
 			"email": "sebastian@veams.org"
+		},
+		{
+			"name": "Andy Gutsche",
+			"email": "andy@veams.org"
 		}
 	],
 	"repository": {
