--- a/video.settings.json
+++ b/video.settings.json
@@ -1,9 +1,8 @@
 {
 	"type": "component",
-	"displayName": "c-video",
 	"contextData": "video-bp",
 	"layout": "lyt-docs",
 	"scssFiles": [
-		"_c-video.scss"
+		"styles/_video.scss"
 	]
 }
